--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,72 @@
   /* padding: 50px; */
   justify-content: center;
   text-align: center;
-  background-color: #4f0000;
+  /* background-color: #4f0000; */
+  background-color: #2b0000;
+  color: #f8f8f8;
 }
+
+.browse_content {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  padding: 150px;
+}
+
+.indivPizza_img-cheese {
+  background-image: url(../assets/cheese.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 225px;
+  width: 400px;
+}
+
+.indivPizza_img-pepperoni {
+  background-image: url(../assets/pepperoni.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 225px;
+  width: 400px;
+}
+
+.indivPizza_img-meat {
+  background-image: url(../assets/meat.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 225px;
+  width: 400px;
+}
+
+.indivPizza_img-veggie {
+  background-image: url(../assets/veggie.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 225px;
+  width: 400px;
+}
+
+.indivPizza_img-bbq {
+  background-image: url(../assets/bbq.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 225px;
+  width: 400px;
+}
+
+.indivPizza {
+  height: 400px;
+  width: 400px;
+  background-color: #f8f8f8;
+  margin-bottom: 32px;
+  color: black;
+}
+
 .header {
   height: 400px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
