--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,88 @@
 #app {
+  margin: auto;
   max-width: 1800px;
   padding: 50px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   background-color: #f8f8f8;
+  border: 2px solid #b50000;
+  border-radius: 50px;
+}
+
+h2 {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 16px;
+  margin-top: 48px;
+}
+
+#h4 {
+  padding: 0px;
+  margin-top: -20px;
 }
 
 #instructions {
-  height: 1710px;
-  width: 1800px;
-  z-index: 20;
+  height: 2100px;
+  width: 1862px;
+  z-index: 100;
   position: absolute;
   margin: 0 auto;
-  /* padding: 50px; */
   justify-content: center;
   text-align: center;
-  /* background-color: #4f0000; */
-  background-color: #2b0000;
-  color: #f8f8f8;
+  border: 10px solid #b50000;
+  border-radius: 10px;
+  background-color: #fff;
+  color: #b50000;
+  top: 0px;
+  left: 0px;
+}
+
+.appInstructions {
+  width: 900px;
+  margin: auto;
+}
+
+.instructionsHeader {
+  height: 450px;
+  width: 1862px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(./../assets/header.jpeg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.instructions_title {
+  font-size: 40px;
+  margin: 48px;
+  color: #000;
+}
+
+#placeOrder {
+  background-color: #b50000;
+  border-radius: 10px;
+  color: white;
+  margin: auto;
+  padding: 10px;
+  margin-top: 16px;
+  margin-bottom: 64px;
+  border: 2px solid #b50000;
+  font-weight: 600;
+}
+#placeOrder:hover {
+  border: 2px solid #b50000;
+  background-color: white;
+  color: #b50000;
+}
+.browse_title,
+.place_title {
+  font-size: 20px;
+}
+
+.place_title {
+  margin-top: 64px;
 }
 
 .browse_content {
@@ -25,7 +90,7 @@
   align-items: center;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  padding: 150px;
+  padding: 32px 150px;
 }
 
 .indivPizza_img-cheese {
@@ -76,7 +141,8 @@
 .indivPizza {
   height: 400px;
   width: 400px;
-  background-color: #f8f8f8;
+  border: 5px solid #2b0000;
+  border-radius: 10px;
   margin-bottom: 32px;
   color: black;
 }
@@ -118,20 +184,53 @@ select {
   padding: 5px;
 }
 
+button {
+  background-color: #b50000;
+  border-radius: 10px;
+  color: white;
+  width: fit-content;
+  padding: 10px;
+  border: 2px solid #b50000;
+}
+
+button:hover {
+  border: 2px solid #b50000;
+  background-color: #f8f8f8;
+  color: #b50000;
+}
+
 .barCharts {
   margin: auto;
   display: flex;
   align-items: flex-end;
   justify-content: center;
   flex-direction: row;
-  height: 400px;
+  height: 450px;
   position: relative;
   border: 1px solid black;
   width: fit-content;
   padding: 10px 64px;
+  border-radius: 15px;
+  margin-top: 32px;
 }
 
-#bar {
+.barAmount {
+  max-height: 400px !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+#bottomBarAmount {
+  padding-bottom: 77px;
+}
+
+#bar,
+#bar2,
+#bar3,
+#bar4,
+#bar5 {
   height: 20px;
   color: #f8f8f8;
   padding: 10px;
@@ -160,21 +259,26 @@ select {
   align-items: center;
   justify-content: center;
   margin: 20px;
+  flex-wrap: wrap;
 }
 
 .indivOrder {
   background-color: #f8f8f8;
   border: 1px solid darkgray;
+  border-radius: 15px;
   margin: 10px;
   padding: 25px;
   max-width: 300px;
   height: 350px;
 }
 
+p {
+  padding: 0px 10px;
+}
+
 .indivOrder div {
   display: inline-block;
   width: 43px;
-  /* background-color: blue; */
   margin: 16px 16px 0px 0px;
   font-weight: 700;
 }
